--- a/style.css
+++ b/style.css
@@ -10,12 +10,15 @@
     --dark-text-color: white;
     --dark-border-color:white;
 }
-
-*{
+html{
+    scroll-behavior: smooth;
+}
+    *{
     box-sizing: border-box;
 }
 body{
     margin: 0;
+    overflow-x: hidden;
 }
 .container{
     width: 80%;
@@ -70,6 +73,9 @@ a{
 /* <!-- navbar --> */
 header{
     box-shadow: 4px -2px 40px 9px gray;
+    position: sticky;
+    top: 0;
+    background: var(--body-bg);
 }
 header .header{
     justify-content: space-between;
@@ -116,12 +122,14 @@ header .header{
 /* <!-- hero section --> */
 .hero-section{
     margin-top: 5rem;
-    max-height: 60vh; ;
+    max-height: 60vh; 
+    padding-top: 10rem;
 }
 .hero{
     background: var(--color-orange);
     grid-template-areas: "left right";
     padding: 2rem;
+    box-shadow: var(--shadow);
 }
 .left{
     grid-area: left;
@@ -139,7 +147,7 @@ header .header{
     letter-spacing: 5px;
 }
 .left button{
-    background: var(--body-bg);
+    background: var(--dark-bg);
     color: var(--dark-text-color);
     padding: 0.8 rem 2 rem;
     border: none;
@@ -157,7 +165,7 @@ header .header{
 }
  /* <!-- banner section --> */
 .banner{
-    margin-top: 7rem;
+    margin-top: 20rem;
     border: 2px solid var(--border-color);
     box-shadow: var(--shadow);
     padding: 2rem;
@@ -226,7 +234,7 @@ grid-template-columns: repeat(2, 1fr);
  .about{
     margin-top: 5rem;
     background: rgb(164, 222, 76);
-    padding: 7rem;
+    padding: 7rem 0rem;
  }
  .about .myImg{
     width: 40%;
@@ -271,6 +279,11 @@ grid-template-columns: repeat(2, 1fr);
     color: antiquewhite;
     padding: 1rem 2rem;
     border-radius: 40px;
+    gap: 3rem;
+    box-shadow:var(--shadow);
+ }
+ .contact .email-section span {
+    font-size: 2rem;
  }
  .contact .email{
     background: var(--color-orange);
@@ -285,4 +298,93 @@ min-height: 30vh;
 background:black ;
 color: antiquewhite;
 margin-top: 5rem;
+flex-direction: column;
  }
+ footer .top{
+    margin-bottom: 5rem;
+    gap: 5rem;
+ }
+ footer .top ul{
+    list-style: none;
+    padding-inline-start: 0px;
+ }
+ footer .top ul li{
+    line-height: 1.5rem;
+ }
+ .goUp{
+    font-size: 3 rem;
+    background: var(--color-orange);
+    width: 70px;
+    height: 70px;
+   
+    border-radius: 50%;
+position: fixed;
+right: 20px;
+bottom: 60px;
+ }
+
+ #hamMenu{
+    display: none;
+ }
+ [for="hamMenu"]{
+    cursor: pointer;
+    display: none;
+ }
+ /* mobile responsive */
+@media (max-width: 768px){
+    [for="hamMenu"]{
+        cursor: pointer;
+        display: block;
+     }
+.menu{
+    position: absolute;
+    background: var(--body-bg);
+    width: 250px;
+    height: 100vh;
+    top: 3.7rem;
+    box-shadow: var(--shadow);
+    left: 100vw;
+    transition: all 1.5s;
+}
+.menu .navigation{
+    flex-direction: column;
+    font-size: 1.3rem;
+}
+.menu .navigation li{
+    line-height: 2.5rem;
+}
+#hamMenu:checked + .menu{
+    left: calc(100vw - 250px);
+}
+.hero{
+    grid-template-areas: 
+    "right"
+    "left";
+}
+.hero .right{
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 3rem;
+}
+.hero .right img{
+    width: 250px;
+}
+.banner{
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 20%;
+}
+.info-divider{
+    display: none;
+}
+.projects .project-container{
+    grid-template-columns: 1fr;
+}
+.about-content{
+    flex-direction: column;
+    align-items: center;
+}
+.about .myImg{
+    width: 100%;
+}
+}
